--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         <h2>FrontEnd Quiz</h2>
-
+         <button id="Start_quiz">Start Quiz</button>
 
         <div class="container">
             <h3 id="question"></h3>
