--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <h2>FrontEnd Quiz</h2>
          <button id="Start_quiz">Start Quiz</button>
-
+            <h4 id="loading"></h4>
         <div class="container">
             <h3 id="question"></h3>
             <div class="options">
