--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h3 id="score"></h3>
         </div>
         <div class="buttons">
+            <span id="counter" ></span>
             <button id="next_question">Next Question</button>
             <button id="submit_test">Submit Test</button>
         </div>
