--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <h2>FrontEnd Quiz</h2>
          <button id="Start_quiz">Start Quiz</button>
             <h4 id="loading"></h4>
+
+            <div class="instruction">
+                <h5>Quiz Instructions</h5>
+                <ul style="margin-top: 10px;">
+                    <li>You will get only one chance to choose an option, once selected you can't change it.</li>
+                    <li>For each question you will get 30 seconds</li>
+                    <li>After 30 seconds you will redirect to next question.</li>
+                    <li style="margin-bottom: 10px;">You can also redirect to next question on clicking the next question button.</li>
+                </ul>
+                <h5 style="text-decoration:none">Good Luck!</h5>
+            </div>
+
         <div class="container">
             <h3 id="question"></h3>
             <div class="options">
