retake test added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
         <div class="container">
-            <h3 id="question"></h3>
+            <h3 id="question">What is the full form of HTML?</h3>
             <div class="options">
                 <!-- <p id="Correct_ans" >Hyper Text MArkUp Language</p>
                 <p class="Wrong_ans1 Wrong">Lorem, ipsum dolor.</p>
@@ -34,10 +34,10 @@
                 <p class="Wrong_ans3 Wrong">Lorem, ipsum dolor.</p> -->
 
 
-                <input type="button" id="Correct_ans"  >
-                <input type="button" class="Wrong_ans1 Wrong" >
-                <input type="button" class="Wrong_ans2 Wrong" >            
-                <input type="button" class="Wrong_ans3 Wrong" >
+                <input type="button" id="Correct_ans"  value="Hyper Text Markup Language">
+                <input type="button" class="Wrong_ans1 Wrong" value="Hyper Text Markup List" >
+                <input type="button" class="Wrong_ans2 Wrong" value="Hyper Text Mask List">            
+                <input type="button" class="Wrong_ans3 Wrong" value="Hyper Test Markup Last">
             </div>
         </div>
         <!-- <p id="check"></p> -->
@@ -45,6 +45,7 @@
         <div class="result_div">
             <h2>Score Card </h2> 
             <h3 id="score"></h3>
+            <button class="Retake_button">Retake Test</button>
         </div>
         <div class="buttons">
             <span id="counter" ></span>
